✨ refactor: 重构挂机奖励配置，将区域配置独立化 1.  将全局奖励、类型、倍率配置迁移到各区域单独配置文件 2.  更新Placeholder扩展以支持按区域获取奖励周期 3.  调整配置版本到v5，移除旧的全局配置校验 4.  重构服务类逻辑以使用区域独立的奖励规则